# tracker

./: .gitignore  BUILD.bazel  Dockerfile  Dockerfile.tmp  README.md  WORKSPACE  bazel.md  build.sh  go.mod  go.sum  launch.sh  mysql.sh  server.conf
.github/workflows/: docker.yml  go.yml
cmd/backend/: Dockerfile  backend.go
cmd/frontend/: Dockerfile  frontend.go
cmd/scraper/: scraper.go
cmd/server/: server.go
database/: BUILD.bazel  database.go
date/: date.go  date_test.go
internal/api/: server.go  shows.go
internal/database/: database.go
internal/database/consul/: consul_test.go  database.go  database_test.go  shows.go  shows_test.go  users.go  users_test.go
internal/database/sql/: database.go  shows.go  sql_test.go  users.go
internal/frontend/: redirect.go  show.go  static.go
internal/httpserver/: middleware.go  server.go
internal/server/: middleware.go  server.go
internal/timeutil/: timeutil.go  timeutil_test.go
internal/types/show/: show.go
internal/types/user/: user.go
main/: main.go
schemas/: schema.sql
scrape/: BUILD.bazel  scraper.go  scraper_test.go
scrape/testdata/: simple-test.html
server/: BUILD.bazel  api.go  frontend.go  server.go  settings.go
server/auth/: auth.go  user.go
server/host/: host.go
server/main/: main.go
server/page/: page.go
templates/: BUILD.bazel  functions.go
templates/public/css/: material.css  menubar_material.css
templates/shows/: add_show.html  detail.html  index.html  navbar.html  requested_shows.html  schedule.html
track/: show.go  type.go
trackable/: BUILD.bazel  type.go
trackable/common/: date.go  date_test.go  host.go  util.go
trackable/music/: music.go
trackable/show/: .api.go.swp  .frontend.go.swp  api.go  collector.go  frontend.go  handler.go  show.go
web/: web.go
web/public/css/: material.css  menubar_material.css
web/templates/shared/: footer.html  header.html
web/templates/shows/: add_show.html  detail.html  index.html  login.html  schedule.html
