package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "auth",
    srcs = [
        "auth/auth.go",
        "auth/user.go",
    ],
    deps = [
        ":page",
        "//database",
        "//trackable:common",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_gorilla_sessions//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
    importpath = "tracker/server/auth",
)

go_library(
    name = "page",
    srcs = ["page/page.go"],
    importpath = "tracker/server/page",
)

go_library(
    name = "server_lib",
    srcs = ["server.go"],
    deps = [
        ":auth",
        "//trackable:common",
        "//trackable:show",
        "//templates",
    ],
    importpath = "tracker/server",
)

go_binary(
    name = "server",
    srcs = ["main/main.go"],
    deps = [
        ":server_lib",
        "//trackable:common",
    ],
)